# databox

./: .gitignore  Dockerfile  Pipfile  PipfileXX  README.md  encrypt.js  instagram_explore.txt  main.py  pyproject.toml  requirements.txt  scrapy.cfg
.github/workflows/: deploy.yml  submit-mcp.yml
data/: decode_qrcode.py  download_img.py
databox/: common_utils.py  middlewares.py  pipelines.py  redis_spider.py  settings.py  utils.py
databox/alipay/: alipay_bill.py  constants.py  items.py  middlewares.py  xxx.py
databox/baidu/: baidu_system.py  dv.js  g.min.js  get_dv.html  gupiao.py
databox/cmbchina/: cdeposit_spider.py  constants.py
databox/danmu/: danmu_client.py  douyu_danmu_client.py  main.py  model.py  stt.py
databox/emoji/: emoji_spider.py  items.py  pipelines.py
databox/fenbi/: enums.py  fenbi_paper_list_spider.py  fenbi_paper_spider.py  items.py  pipelines.py
databox/github/: github_repo_search_spider.py  github_repo_spider.py  github_search_spider.py  items.py  mcp_crawler.py  pipelines.py  submit-mcp.py  submit_mcp.py  submit_mcp_crawl_task.py  update_all_mcp_server.py
databox/hao6v/: constants.py  hao6v_spider.py  items.py  pipelines.py
databox/icloud/: icloud_system.py  items.py  location_spider.py  login_icloud.py  middlewares.py  pipelines.py
databox/idiom/: enums.py  idiom_spider.py  items.py  pipelines.py
databox/instagram/: README.md  constants.py  ins_comment_spider.py  ins_doc_id_spider.py  ins_explore_spider.py  ins_media_list_spider.py  ins_media_spider.py  ins_user_spider.py  items.py  model.py  pipelines.py  run_spider.py  submit_task.py
databox/juejin/: constants.py  juejin_tag_search_spider.py
databox/messefrankfurt_event/: exhibitors.json
databox/neteasemusic/: apis.py  comment_spider.py  follow_spider.py  followed_spider.py  items.py  pipelines.py  user_spider.py  utils.py
databox/petchain/: item_loaders.py  items.py  pipelines.py  spider.py  spiders.py
docker-compose.d/: mcp.yml
(+67 files in other folders)
