[project]
name = "databox"
version = "0.1.0"
description = ""
authors = [
    {name = "adon",email = "xxd.nobug@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "pyexecjs (>=1.5.1,<2.0.0)",
    "scrapy-redis (>=0.9.1,<0.10.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "playwright-stealth (>=1.0.6,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "peewee (>=3.17.8,<4.0.0)",
    "pymongo (>=4.10.1,<5.0.0)",
    "selenium (>=4.28.1,<5.0.0)",
    "pycryptodome (>=3.21.0,<4.0.0)",
    "qrcode (>=7.0,<8.0)",
    "mitmproxy (>=11.1.0,<12.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
