[project]
name = "databox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "apscheduler>=3.11.0",
    "arrow>=1.3.0",
    "fastmcp>=0.4.1",
    "httpx>=0.28.1",
    "mitmproxy>=11.1.3",
    "peewee>=3.17.9",
    "playwright-stealth>=1.0.6",
    "pycryptodome>=3.22.0",
    "pydantic>=2.10.6",
    "pyexecjs>=1.5.1",
    "pymongo>=4.11.2",
    "qrcode>=8.0",
    "scrapy>=2.12.0",
    "scrapy-playwright>=0.0.43",
    "scrapy-redis>=0.9.1",
    "selenium>=4.29.0",
    "sqlalchemy>=2.0.39",
]
